nov 12 - tests complete